Update PokemonSelector options to correctly format new pokemon names; fix spacing issue in result lists

--- a/src/index.scss
+++ b/src/index.scss
@@ -222,7 +222,7 @@ input,
 
 @media (min-width: 992px) {
   .egg-group-super-wrapper {
-    width: 16em;
+    width: 18rem;
   }
 }
 
